--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="414dp"
         android:layout_height="733dp"
         app:layout_constraintBottom_toBottomOf="parent"
